Fix spacing of recaptcha in forms.

--- a/_sass/forms.sass
+++ b/_sass/forms.sass
@@ -29,3 +29,8 @@
 
   label[for="contact.name"]
     padding-top: 2px
+
+#form-contact,
+#form-signup
+    .g-recaptcha
+      margin-top: 2rem
